--- a/scss/map.scss
+++ b/scss/map.scss
@@ -69,7 +69,7 @@
   }
 
   // INFOWINDOW
-  div.cartodb-popup {
+  div.cartodb-popup.stories {
     width:417px;
     padding-top:5px;
     background:url("../img/map/infowindow-top.png") no-repeat;
