added contry row in stories infowindow

--- a/scss/map.scss
+++ b/scss/map.scss
@@ -146,7 +146,7 @@
 
     label {
       display:block;
-      // margin-top:3px;
+      margin-top:2px;
       font:bold 11px $helvetica;
       line-height:12px;
       color:#4CA7CC;
