added comma separator + infowindow without country label

--- a/scss/map.scss
+++ b/scss/map.scss
@@ -164,6 +164,8 @@
       font-size:14px;
       color:#999999;
 
+      strong { font-weight:bold }
+
       &.margin { margin-top:12px }
 
       a {
