added social links + social meta tags

--- a/css/map-sprite.css
+++ b/css/map-sprite.css
@@ -1,1 +1,1 @@
-.map-sprite{background:url('/img/map-s57ccefa798.png') no-repeat}
+.map-sprite{background:url('/img/map-s32cc11215d.png') no-repeat}
